<resources>

    <string name="app_name">Work Tracking</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="mmdt_app_name">Beacon Work Tracking App</string>
    <string name="mmdt_hint_username">Username</string>
    <string name="mmdt_hint_password">Password</string>
    <string name="mmdt_button_login">Login</string>
    <string name="mmdt_button_register">Register</string>
    <string name="mmdt_error_password">Password must contain at least 8 characters.</string>
    <string name="mmdt_filter_title">Filter</string>
    <string name="mmdt_search_title">Search</string>
    <string name="mmdt_button_cancel">Back</string>
    <string name="mmdt_button_verify">Verify Email</string>
    <string name="mmdt_location">Location</string>
    <string name="mmdt_duration">Duration</string>
    <string name="mmdt_timestamp">[1999-03-03 09:09:09]</string>
    <string name="mmdt_namespace">Namespace</string>
    <string name="mmdt_instanceid">Instance ID</string>
    <string name="mmdt_beaconlocation">Meeting Room</string>
    <string name="mmdt_beacon_namespace">The Current Namespace is: 0x00112233445566778899</string>
    <string name="mmdt_no_namespace">0x00112233445566778899</string>
    <string name="employee_names">Name: Brandon Hwong</string>
    <string name="employee_job">Job: Software Engineer</string>
    <string name="employee_duration">Duration: 10hr 56m</string>
    <!-- Backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>

    //Tab Strings
    <string name="tab1title">Log</string>
    <string name="tab2title">Map</string>
    <string name="tab3title">Settings</string>

    //Map Fab
    <string name="extended_fab_label">Set Location</string>
    <string name="extended_fab_content">Get Place</string>
    //Navigation Drawer
    <string name="nav_draw_name">Brandon Hwong</string>
    <string name="nav_draw_email">Brandon@mmdt.cc</string>

    <string name="title_activity_nav_drawer">navDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings_delete">Remove all</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_beacon_setting">BeaconSettingActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    //Profile Strings
    <string name="profile_name">Full Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_phonenumber">Phone number</string>
    <string name="profile_jobtitle">Job Title</string>

    //Bluetooth Fragment
    <string name="bt_boldtext">Searching</string>
    <string name="bt_location">Location</string>
    <string name="bt_status">Status</string>
    <string name="bt_button">Check-In</string>


    //AppId Strings
    <string name="hintText"><b>Hint:</b> Replace this screen with content that is available before a user is asked to login</string>
    <string name="mainAppID">App <b>ID</b></string>
    <string name="guest">Continue as guest</string>
    <string name="login">Sign in</string>
    <string name="choice">What would you like to eat?</string>
    <string name="get_gifts">Login, earn points and get gifts!</string>
    <string name="new_bonus_points">Thanks for joining! You just earned %1$s bonus points to get you started :)</string>
    <string name="bonus_points">You have %1$s points, go get an ice cream!</string>
    <string name="test_that_everything_is_working">Test that everything is working and customize the UI from the console.</string>
    <string name="view_token">View Token</string>
    <string name="greet">Hi</string>
    <string name="notice">Note:</string>
    <string name="description">Description</string>
    <string name="selected_icon">selected icon</string>
    <string name="welcome_to_your_working_app_id_sample">Welcome to your App ID sample app</string>
    <string name="brand">Cloudland</string>
    <string name="progressive_auth_notice">"A guest user logged-in for the first time.
        App ID assigned this user’s identity to his anonymous profile, so his previous selections are saved. The anonymous token previously used to access this profile is now invalid."</string>
    <string name="switch_to_identified_notice">"A user started to use the app anonymously, made some selections, and then logged in.
        Since he had logged in in the past, the app switches over to his existing identified profile in place of his anonymous profile."</string>
    <string name="logged_in_new_notice">"An identified user logged in for the first time. A new Profile was created on App ID.
        Now when he logs in with the same credentials from any device or web client, the app will show his same profile and selections."</string>
    <string name="logged_in_again_notice">"A known identified user logged in again. His Profile is fetched from App ID.</string>
    <string name="new_guest_notice">"A guest user started using the app.
        App ID created a new anonymous profile, where the user’s selections can be stored. Note that this anonymous profile is only available from this device."</string>
    <string name="returning_guest_notice">"A guest user returned.
The app uses his existing anonymous profile, so his previous selections are shown. Note that this anonymous user profile is only available from this device."</string>
    <string name="login_back_notice">"An identified user returned to the app with the same identity.
The app accesses his identified profile and the previous selections that he made."</string>
    <string name="login_back_and_change_login_notice">"The user signed back into the device with a different identity (e.g. was with Facebook, now with Google). The profile related to the identity he currenlty logged in with is now shown."</string>
    <string name="please_wait">Please Wait...</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="account_details">Account Details</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Sign out</string>
    <string name="facebook_app_id">YOUR_APP_ID_HERE</string>


    //Bluetooth Fragment
    <string name="location">Location: %1$s</string>
    <string name="location_rssi">Location: %1$s RSSI: %2$.0f dBm</string>
    <string name="scanning">Scanning</string>
    <string name="check_in">CHECK-IN</string>
    <string name="check_out">CHECK-OUT</string>
    <string name="check_out_title">Ready to Check-Out</string>

    //Verification Dialog
    <string name="veri_dialog_check_in">Successful Check-In</string>
    <string name="veri_dialog_check_in_subtext">Remember to check-out when finished</string>
    <string name="veri_dialog_check_out">Successful Check-out</string>
    <string name="veri_dialog_check_out_subtext">You have successfully checked-out</string>
    <string name="veri_dialog_failed">Failed</string>
    <string name="veri_dialog_failed_subtext">Fingerprint verification failed, please try again</string>
    <string name="ok">OK</string>

    //Attendance Card
    <string name="att_card_email">Email: </string>
    <string name="att_card_check_in">Check-In Time: </string>
    <string name="att_card_check_out">Check-Out Time: </string>
    <string name="att_card_location">Location: </string>
    <string name="att_card_hours">Duration: </string>

</resources>
