<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:background="@drawable/card_background"
    app:cardElevation="15dp"
    app:cardCornerRadius="8dp"
    app:cardMaxElevation="30dp"
    app:cardPreventCornerOverlap="true"
    app:contentPadding="8dp"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/namespace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmdt_namespace"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/card_text_color" />

        <TextView
            android:id="@+id/instanceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmdt_instanceid"
            android:textColor="@color/card_text_color"
            android:textAppearance="?attr/textAppearanceBody1"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmdt_location"
            android:textColor="@color/card_text_color"
            android:textAppearance="?attr/textAppearanceBody1"
            />


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
