<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:layout_gravity="center">


<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/md_grey_50"
    app:cardCornerRadius="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/veri_dialog_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_check_circle_24">
            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/veri_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:text="@string/veri_dialog_check_in">
            </TextView>

            <TextView
                android:id="@+id/veri_dialog_subtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/quantum_grey600"
                android:text="@string/veri_dialog_check_in_subtext"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginTop="15dp">
            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/veri_dialog_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#20A641"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

</RelativeLayout>