<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/boldText"
        android:text ="@string/bt_boldtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.textview.MaterialTextView>

    <com.eyalbira.loadingdots.LoadingDots
        android:id="@+id/loadingDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:LoadingDots_dots_size="3dp"
        app:LoadingDots_dots_color="@android:color/black"
        app:LoadingDots_loop_duration="700"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/boldText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        android:id="@+id/progressBar"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:cpv_animAutostart="true"
        app:cpv_indeterminate="true"
        app:layout_constraintVertical_bias="0.275"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bluetooth_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_baseline_bluetooth_searching_24"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.AppCompatImageView>



    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_location"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bluetooth_icon">

    </TextView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:text="@string/bt_button"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bluetooth_icon">
    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>