<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_black_48dp"
                android:id="@+id/profile_name_icon">

            </ImageView>
            <RelativeLayout
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/profile_name_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profile_name_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/profile_name"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileHeader"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:contentDescription="Name Edit Button"
                    android:id="@+id/profile_name_edit_icon"
                    android:clickable="true"
                    />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_below="@id/profile_name_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:hint="Enter Your Name"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileBody"/>
            </RelativeLayout>

        </RelativeLayout>

        <FrameLayout
            android:background="@color/ltsCardColor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_black_48dp"
                android:id="@+id/profile_email_icon">
            </ImageView>
            <RelativeLayout
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/profile_email_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profile_email_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/profile_email"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileHeader"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:contentDescription="Email Edit Button"
                    android:id="@+id/profile_email_edit_icon"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_below="@id/profile_email_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:hint="Enter Your Email"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileBody"/>
            </RelativeLayout>

        </RelativeLayout>
        <FrameLayout
            android:background="@color/ltsCardColor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_black_48dp"
                android:id="@+id/profile_phone_icon">
            </ImageView>

            <RelativeLayout
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/profile_phone_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profile_phone_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/profile_phonenumber"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileHeader"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:contentDescription="Phone Edit Button"
                    android:id="@+id/profile_phone_edit_icon"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/profile_phone"
                    android:layout_below="@id/profile_phone_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:hint="Enter Your Phone Number"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileBody"/>
            </RelativeLayout>

        </RelativeLayout>
        <FrameLayout
            android:background="@color/ltsCardColor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tie"
                android:id="@+id/profile_job_icon">
            </ImageView>

            <RelativeLayout
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/profile_job_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profile_job_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/profile_jobtitle"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileHeader"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:contentDescription="Job Title Edit Button"
                    android:id="@+id/profile_jobtitle_edit_icon"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/profile_job"
                    android:layout_below="@id/profile_job_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:hint="Enter Your Job Title"
                    android:textAppearance="@style/TextAppearance.MyApp.ProfileBody"/>
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>